Apply Optisigns credentials for login/OTA download

--- a/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
+++ b/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
@@ -8,8 +8,8 @@
 #
 
 # User Security
-spring.security.user.name=admin
-spring.security.user.password={noop}admin
+spring.security.user.name=optisigns
+spring.security.user.password={noop}OptisignsYocto
 spring.main.allow-bean-definition-overriding=true
 
 # Http Encoding
@@ -42,3 +42,16 @@ spring.rabbitmq.port=5672
 # Enable CORS and specify the allowed origins:
 #hawkbit.server.security.cors.enabled=true
 #hawkbit.server.security.cors.allowedOrigins=http://localhost
+
+
+hawkbit.server.security.cors.allowedHeaders=Content-Type,Authorization,Accept 
+hawkbit.server.security.cors.allowedMethods=GET,POST,HEAD
+hawkbit.server.security.cors.enabled=true
+hawkbit.server.security.cors.allowedOrigins=https://hawkbit.optisigns.com
+
+hawkbit.artifact.url.protocols.download-http.rel=download-http
+hawkbit.artifact.url.protocols.download-http.hostname=hawkbit.optisigns.com
+hawkbit.artifact.url.protocols.download-http.protocol=https
+hawkbit.artifact.url.protocols.download-http.supports=DMF,DDI
+hawkbit.artifact.url.protocols.download-http.ref={protocol}://{hostnameRequest}/{tenant}/controller/v1/{controllerId}/softwaremodules/{softwareModuleId}/artifacts/{artifactFileName}
+
