Add dependency for mysql database. But disabling mysql due to server instability issue. Now use internal database

--- a/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
+++ b/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
@@ -55,3 +55,11 @@ hawkbit.artifact.url.protocols.download-http.protocol=https
 hawkbit.artifact.url.protocols.download-http.supports=DMF,DDI
 hawkbit.artifact.url.protocols.download-http.ref={protocol}://{hostnameRequest}/{tenant}/controller/v1/{controllerId}/softwaremodules/{softwareModuleId}/artifacts/{artifactFileName}
 
+
+
+# Database
+#spring.jpa.database=MYSQL
+#spring.datasource.password=AVNS_mPwKnOmVejp9k3Ib9zn
+#spring.datasource.username=hawkbit
+#spring.datasource.url=jdbc:mysql://mysql-optisigns-prod-hawkbit-do-user-1865655-0.c.db.ondigitalocean.com:25060/hawkbit?allowPublicKeyRetrieval=true&useSSL=false&useMysqlMetadata=true
+
