--- a/hawkbit-runtime/hawkbit-update-server/pom.xml
+++ b/hawkbit-runtime/hawkbit-update-server/pom.xml
@@ -76,11 +76,11 @@
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
       </dependency>
-      <dependency> 
-         <groupId>org.mariadb.jdbc</groupId>
-         <artifactId>mariadb-java-client</artifactId>
-         <version>2.7.10</version>
-      </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.18</version>
+    </dependency>
 
       <!-- Test -->
       <dependency>
