Support a new rollout state named DOWNLOADED to identify if an OTA rollout has been RETRIEVED by a target device

--- a/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
+++ b/hawkbit-runtime/hawkbit-update-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #
 
 # User Security
-spring.security.user.name=optisigns
+spring.security.user.name=admin
 spring.security.user.password={noop}OptisignsYocto
 spring.main.allow-bean-definition-overriding=true
 
